{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 55,
  "lineage": "66cdb8ec-d274-d778-5939-dd7c06bafdba",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0df5eaf8616ffc5ae",
            "public_dns": "ec2-3-97-3-197.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.97.3.197",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_igw",
            "module.vpc.aws_route_table.public_rt_table",
            "module.vpc.aws_route_table_association.rt_asso_public",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:719042170775:internet-gateway/igw-0fb2418172c4d9ad2",
            "id": "igw-0fb2418172c4d9ad2",
            "owner_id": "719042170775",
            "tags": {
              "Name": "IG-Public-\u0026-Private-VPC"
            },
            "vpc_id": "vpc-0ac00e0ee737ccfd1"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df5eaf8616ffc5ae",
            "id": "nat-0a57b208e4600eb8c",
            "network_interface_id": "eni-070c054570d3280f8",
            "private_ip": "192.168.0.129",
            "public_ip": "3.97.3.197",
            "subnet_id": "subnet-0c8c934a269417d7a",
            "tags": {
              "Name": "Nat-Gateway_Project"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.Nat-Gateway-EIP",
            "module.vpc.aws_internet_gateway.main_igw",
            "module.vpc.aws_route_table.public_rt_table",
            "module.vpc.aws_route_table_association.rt_asso_public",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT-Gateway-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b51c5c1d4f7c6f13",
            "owner_id": "719042170775",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0a57b208e4600eb8c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT Gateway"
            },
            "vpc_id": "vpc-0ac00e0ee737ccfd1"
          },
          "dependencies": [
            "module.vpc.aws_eip.Nat-Gateway-EIP",
            "module.vpc.aws_internet_gateway.main_igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.public_rt_table",
            "module.vpc.aws_route_table_association.rt_asso_public",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00ef58ec2846a14d7",
            "owner_id": "719042170775",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fb2418172c4d9ad2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for Internet Gateway"
            },
            "vpc_id": "vpc-0ac00e0ee737ccfd1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_igw",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e84bc84a51f9330",
            "route_table_id": "rtb-0b51c5c1d4f7c6f13",
            "subnet_id": "subnet-0f9cc45075ee57335"
          },
          "dependencies": [
            "module.vpc.aws_eip.Nat-Gateway-EIP",
            "module.vpc.aws_internet_gateway.main_igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.NAT-Gateway-RT",
            "module.vpc.aws_route_table.public_rt_table",
            "module.vpc.aws_route_table_association.rt_asso_public",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_asso_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038d2610b85f18ba1",
            "route_table_id": "rtb-00ef58ec2846a14d7",
            "subnet_id": "subnet-0c8c934a269417d7a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_igw",
            "module.vpc.aws_route_table.public_rt_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:719042170775:subnet/subnet-0f9cc45075ee57335",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0f9cc45075ee57335",
            "map_public_ip_on_launch": false,
            "owner_id": "719042170775",
            "tags": {
              "Name": "Manage User-Dev-private"
            },
            "vpc_id": "vpc-0ac00e0ee737ccfd1"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:719042170775:subnet/subnet-0c8c934a269417d7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0c8c934a269417d7a",
            "map_public_ip_on_launch": true,
            "owner_id": "719042170775",
            "tags": {
              "Name": "Manage User-Dev-public"
            },
            "vpc_id": "vpc-0ac00e0ee737ccfd1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:719042170775:vpc/vpc-0ac00e0ee737ccfd1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-05ed134566258b936",
            "default_route_table_id": "rtb-042be1b72567f497a",
            "default_security_group_id": "sg-072d671e28979f018",
            "dhcp_options_id": "dopt-9968c0f0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ac00e0ee737ccfd1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-042be1b72567f497a",
            "owner_id": "719042170775",
            "tags": {
              "Name": "Manage User-Dev"
            }
          }
        }
      ]
    }
  ]
}